:bug: fix(meteor): fix overflow

--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -33,6 +33,13 @@
   }
 }
 
+.meteor-grid {
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
+}
+
 .meteor {
   position: absolute;
   height: 10px;
